# CG

./: .gitignore
Experiment1/: 2023150001_李文俊_实验一.docx  MacOS VScode配置指南.docx  main.cpp  学号_姓名_实验一.docx
Experiment1/Codes0/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
Experiment1/Codes1/: CMakeLists.txt  main.cpp
Experiment1/Codes1/shaders/: vshader.glsl
Experiment1/Test/: CMakeLists.txt  main.cpp
Experiment2/: 2023150001_李文俊_实验二.docx  2023150001_李文俊_实验二.rar  CMakeLists.txt  main.cpp  实验二 三维模型读取与控制.docx
Experiment2.1/code/: CMakeLists.txt  main.cpp
Experiment2.2/2023150001_李文俊_实验2.2/code/: main.cpp
Experiment2.3/: ~$2.3 三维模型的平移缩放和旋转.docx  实验2.3 三维模型的平移缩放和旋转.docx
Experiment2.3/实验2.3_留空代码/: CMakeLists.txt  TriMesh.cpp  main.cpp
Experiment2/2023150001_李文俊_实验二/code/: InitShader.cpp  main.cpp
Experiment2/2023150001_李文俊_实验二/code/include/: CheckError.h
Experiment2/2023150001_李文俊_实验二/code/include/glad/: glad.h
Experiment2/2023150001_李文俊_实验二/code/shaders/: fshader.glsl
Experiment2/include/: Angel.h
Experiment2/shaders/: vshader.glsl
Experiment3/: Camera.cpp  main.cpp  test.txt
Experiment3.1/2023150001_李文俊_实验3.1/code/: Camera.cpp  main.cpp
Experiment3.2/: 实验3.2 投影和阴影.docx
Experiment3.2/2023150001_李文俊_实验3.2/code/: Camera.cpp
Experiment3.2/实验3.2_留空代码/: main.cpp
Experiment3.3/2023150001_李文俊_实验3.3/code/: main.cpp
Experiment3.3/实验3.3_留空代码/: CMakeLists.txt  TriMesh.cpp  main.cpp
Experiment3.4/2023150001_李文俊_实验3.4/code/: CMakeLists.txt
Experiment3.4/2023150001_李文俊_实验3.4/code/shaders/: fshader.glsl
Experiment3.4/实验3.4_留空代码/: TriMesh.cpp  main.cpp
Experiment3/2023150001_李文俊_实验三/code/: TriMesh.cpp
Experiment3/2023150001_李文俊_实验三/code/shaders/: fshader.glsl
Experiment4/: 2023150001_李文俊_实验四.docx
Experiment4.1/2023150001_李文俊_实验4.1/code/: Camera.cpp  TriMesh.cpp  main.cpp
Experiment4.1/实验4.1_留空代码/: MeshPainter.cpp
Experiment4/2023150001_李文俊_实验四/code/: CMakeLists.txt  Camera.cpp  MeshPainter.cpp  TriMesh.cpp
Experiment4/实验四_留空代码/: main.cpp
Experiment4/实验四_留空代码/shaders/: fshader.glsl
Final/: CMakeLists.txt  README.md  ~$大作业 虚拟场景建模.docx  期末大作业 虚拟场景建模.txt  要求.txt
Final/assets/textures/: concrete_wall.ppm  floor_tile.ppm  floor_warm.ppm  table_top.ppm
Final/src/: Camera.cpp  MeshPainter.cpp  main.cpp
Mid-term/: 2023150001_李文俊_期中大作业.docx
Mid-term/2023150001_李文俊_期中大作业/code/: main.cpp
Mid-term/期中大作业_留空代码/: CMakeLists.txt
Mid-term/期中大作业_留空代码/.history/: main_20210926105647.cpp  main_20230918145229.cpp
PPT/: CG_ch03_2.pptx  CG_ch04_3.pptx
include/glad/: glad.h
补充1/2023150001_李文俊_实验补充一/code/: CMakeLists.txt  MeshPainter.cpp  main.cpp
补充1/实验补充1_留空代码/: Camera.cpp  TriMesh.cpp
补充2/2023150001_李文俊_实验补充二/code/: main.cpp
补充2/实验补充2_留空代码/: CMakeLists.txt
